--- a/src/pages/books.njk
+++ b/src/pages/books.njk
@@ -1,13 +1,12 @@
 ---
-title: Books I'm Reading
+title: Books
 layout: layouts/base.njk
 permalink: /books/
 ---
 
-<h1 class="text-3xl font-bold mb-8">Books I'm Reading</h1>
-
-<p class="mb-8 text-gray-600 dark:text-gray-400">
-  Click on a book to see more details.
+<h1 class="text-xl font-semibold tracking-tight mb-2" style="color: var(--color-text);">Books</h1>
+<p class="text-[14px] mb-8" style="color: var(--color-text-secondary);">
+  What I'm currently reading.
 </p>
 
 {% include "components/bookshelf.njk" %}
